uploaded missing code

--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +32,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,6 +56,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43178,6 +43181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43421,6 +43425,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43506,6 +43511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43685,7 +43691,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Average pressure by Martian month\n"
+    "# 4. Average pressure by Martian month\n",
+    "average_pressure= df.groupby('month')['pressure'].mean()\n",
+    "average_pressure"
    ]
   },
   {
@@ -43694,7 +43702,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the average pressure by month\n"
+    "# Plot the average pressure by month\n",
+    "average_pressure.plot(kind=('bar'))\n",
+    "plt.ylabel(\"Average Pressure\")"
    ]
   },
   {
@@ -43703,10 +43713,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. How many terrestrial (earth) days are there in a Martian year?\n"
+    "# 5. How many terrestrial (earth) days are there in a Martian year?\n",
+    "df.min_temp.plot()\n",
+    "plt.xlabel('Number of terrestrial days')\n",
+    "plt.ylabel('Minimum temperature')\n",
+    "plt.show()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43715,6 +43730,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43722,6 +43738,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43729,6 +43746,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43743,7 +43761,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write the data to a CSV\n"
+    "# Write the data to a CSV\n",
+    "df.to_csv('output.csv', index=False)"
    ]
   },
   {
